# WebFluxStudio

./: .gitignore  README.md  pyproject.toml
docs/: mission.md  notes.md
fluxatlas/: __init__.py  core.py  insights.py  model.py  renderer.py
scripts/: storyboard.py
tests/: test_insights.py
