[project]
name = "fluxatlas"
version = "0.1.0"
description = "A narrative workshop that logs micro project sketches for a solo developer."
authors = ["samuelowend <lcsvsb9796@outlook.com>"]
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
